[package]
name = "uwu"
version = "0.1.0"
authors = ["jjorissen52 <jjorissen52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = "0.8.0"
regex = "1.2.1"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-binutils"